# robot4ws_description

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/controllers/: joints.yaml
launch/: controllers.launch  test_urdf.launch  visualize.launch
meshes/: MSL_Gale_DEM_Mosaic_1m_v3_X_14315-14364_Y_47079-47098.dae  MSL_Gale_DEM_Mosaic_1m_v3_X_14315-14364_Y_47079-47098.stl  tilt_plate.STL  wheel_v1.STL  wheel_v2.STL
rviz/: default.rviz
urdf/: rover.urdf  rover.urdf.xacro
urdf/config/: body.yaml  body_only.yaml  leg.yaml  tilt_plate.yaml  wheel_hub.yaml
urdf/worlds/: DLR_test2_surface.world  MSL_Gale_DEM_Mosaic_1m_v3_X_14315-14364_Y_47079-47098_v1.world  crowd_world.world  empty_world.world  only_walls.world  only_walls_and_obstacles.world  tilted_floor_walls_and_obstacles.world
urdf/xacros/: materials.xacro  plugins.xacro  rover_body.xacro  rover_differential.xacro  rover_leg.xacro  sensors.xacro  wheel_hub.xacro
